hashmaps1/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check)
error[E0425]: cannot find value `basket` in this scope
  --> src/main.rs:22:5
   |
22 |     basket.insert(String::from("banana"), 2);
   |     ^^^^^^ not found in this scope

error[E0601]: `main` function not found in crate `format_check`
  --> src/main.rs:44:2
   |
44 | }
   |  ^ consider adding a `main` function to `src/main.rs`

Some errors have detailed explanations: E0425, E0601.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `format_check` (bin "format_check") due to 2 previous errors

[!] Source code format check: FAILED
